# repo

./: Descrição-Diagrama-Sequencia  Diagrama-Deployment.txt  Entrada_movimento.sql  Install_airflow.txr  Plantuml1  Plantuml2  Plantuml3  autopep8.txt  cert_fracos.py  config.yaml  create_table.py  criarTabelaPinot.txt  dag.py  data.json  diagrama.drawio  docker-compose.yml  file.txt  gitlab_integration.py  gitlabci.yml  insert.txt  job.py  message_stream_geolocation.py  pinot.txt  pinot_aprovacoes.py  pinot_crud.py  poetry.txt  pyproject.toml  repo.txt  sales-data.csv  sales-schema.json  sales-table.json  test.py  test_utils.py
