[tool.poetry]
name = "seu-projeto"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "~1.0.1"
confluent-kafka = {version = "~2.4.0", extras = ["avro"]}
proto-schema-parser = "~1.3.3"
urllib3 = "~2.0.7"
trino = "~0.328.0"
boto3 = "~1.34.113"
kafka-python-ng = "~2.2.2"
lz4 = "~4.3.3"
SQLAlchemy = "2.0.30"
sqlalchemy-mixins = "2.0.5"
mysql-connector-python = "8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
