[tool.poetry]
name = "pinot-utils"
version = "0.1.0"
description = "Scripts para apache Pinot, Thirdeye e Superset"
authors = ["Leonardo Valle <3rdparty_leonardo.valle@inter.co>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
confluent-kafka = { version = "~2.4.0", extras = ["avro"] }
proto-schema-parser = "~1.3.3"
urllib3 = "~2.0.7"
trino = "~0.328.0"
boto3 = ">=1.34.113,<1.35.0"
kafka-python-ng = "~2.2"
lz4 = "~4.3.3"
SQLAlchemy = "2.0.30"
sqlalchemy-mixins = "2.0.5"
mysql-connector-python = "8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
